# painel_maratonista

./: .gitignore  README.md  app.py  pyproject.toml
pages/: cadastro.py  painel.py  simulador.py
